@@ -31,7 +31,7 @@ NOTE: sorry, this is very raw :)
 		- wide pitch bends
 		- should maybe appear under current editor? it's always useful to see the notes when applying effects
         - support fine values
- - support wide pitch-bend
+        - support wide pitch-bend
  - non-linear/riff-based song editing (e.g. to repeat chorus you don't need to keep multiple copies of it)
  - allow using another renderer than OpenGL
  - multiple program changes
@@ -41,9 +41,10 @@ NOTE: sorry, this is very raw :)
 ************************* NEW FEATURES TO ADD: *************************
 
  + make more features accessible graphically (as opposed to keyboard-only)
- 
- + elements you get from clicking on the left area should appear in the main menubar too
-
+   - add new tools, that allow adding notes without dragging (and resizing without keyboard, and selecting, and...?) ?
+   
+ - allow shift-clicking in measure bar to select more measures
+   
  - .aria files don't remember whether drums are minimized
  - .aria files don't remember docked tracks
  - background choices are not saved to .aria files
@@ -54,24 +55,21 @@ NOTE: sorry, this is very raw :)
  + linux : offer to launch timidity deamon if it's not running
  + linux : proper ALSA port selection (in preferences?)
 
- + cursor should change when hitting key modifiers (at least a select icon when hitting shift in control editor)
-
- + if you select measures in the measure bar, but move the cursor below measure pane before releasing, you get nothing
-    (same with all tracks, rework event handling? determine where click goes on mouse down, and always use same destination on mouse drag?)
-    (use CaptureMouse to allow drags to continue off-screen?)
-   
+ - elements you get from clicking on the left area should appear in the main menubar too
+ 
  - change whole track pitch/volume
  
  + reordering tracks should be nicer
  
  - set default volume
+ 
  - shift-click on a selected notes unselects it
+ - cursor should change when hitting key modifiers (at least a select icon when hitting shift in control editor)
 
  - change volume relatively on a bunch of notes
  - select notes and all similar menu items should be disabled in controller mode
  
  UNSURE/MINOR:
-  - add new tools, that allow adding notes without dragging (and resizing without keyboard, and selecting, and...?)
  - setting sharp/flat sign manually sometimes doesn't work (when it's possible to display the note on a level with no sign)
  - key is not saved to midi files (the problem is that in midi key is global, in Aria it is local)
  - render a bit less often + probably too many paint events (duplicate ones at times) track and remove them
